--- a/app/views/creatives/_header.html.erb
+++ b/app/views/creatives/_header.html.erb
@@ -17,13 +17,19 @@
                         <%= video_tag("office_video.mp4", :controls => false, :autobuffer => true, :autoplay => true, :loop => true, :id => "video-background") %>
                     </div>
                     <div class="container-fluid key_text">
-                        <h2>Make Everything Work in Your Office</h2>
-                        <h1 style="color: #f05f40;"><a style="text-decoration: none;" href="sms:07454574821">07 45 45 74 821</a></h1>
-                        <br>
-                        <h4>Send an SMS to this number to get started</h4>
-                        <h4>Available on-demand during weekdays from 8AM until 8PM</h4>
-                        <hr>
-                        <%= link_to 'REGISTER MY DETAILS', new_account_path, class: "btn btn-primary btn-xl page-scroll" %>
+                        <div class="container-fluid">
+                            <div class="row">
+                                <div class="col-lg-4 col-lg-offset-4 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1" style = 'background-color: white; opacity: 0.8; color: rgb(240, 95, 64);'>   
+                                    <h1>Make Everything Work in Your Office</h1>
+                                    <h1 style="color: #f05f40;"><a style="text-decoration: none;" href="sms:07454574821">07 45 45 74 821</a></h1>
+                                    <br>
+                                    <h4>Send an SMS to this number to get started</h4>
+                                    <h4>Available on-demand during weekdays from 8AM until 8PM</h4>
+                                    <hr>
+                                    <%= link_to 'REGISTER MY DETAILS', new_account_path, class: "btn btn-primary btn-xl page-scroll" %>
+                                </div> 
+                            </div>
+                        </div>
                     </div>
                 </section>
 
